--- a/.github/workflows/cache-workflow.yml
+++ b/.github/workflows/cache-workflow.yml
@@ -14,12 +14,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Cache dependencies
+      - name: prime-cache-1414f4c
         id: cache
         uses: actions/cache@v4
         with:
           path: ~/.cache
           key: cache-1414f4c
 
-      - name: prime-cache-1414f4c
-        run: echo "Cache hit - ${{ steps.cache.outputs.cache-hit }}"
+      - name: Report cache result
+        run: |
+          echo "cache-hit=${{ steps.cache.outputs.cache-hit }}"
